adjusted submit button display across platforms

--- a/templates/homepage/styles.css
+++ b/templates/homepage/styles.css
@@ -97,6 +97,10 @@ textarea {
     width: 100%;
 }
 
+#submit-contact {
+    appearance: none;
+}
+
 p {
     display: block;
     margin-block-start: 1em;
